--- a/login.signup/loading.html
+++ b/login.signup/loading.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Loading...</title>
-    <link rel="stylesheet" href="loading.css">
-    <script defer src="loading.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Loading...</title>
+  <link rel="stylesheet" href="loading.css">
+  <script defer src="loading.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
-    <div class="loader-container">
-        <img src="login.signup/v1_101.png" alt="LAMB Logo" class="loading-image">
-        <h1 class="loading-text" id="loading-text"></h1>
-    </div>
-
+  <div class="loader-container">
+    <img src="login.signup/v1_101.png" alt="LAMB Logo" class="loading-image" id="logo">
+    <h1 class="loading-text" id="loading-text"></h1>
+  </div>
 </body>
 </html>
