--- a/login.signup/contact.html
+++ b/login.signup/contact.html
@@ -30,7 +30,7 @@
               <div class="campus-description">
                 Nestled in the scenic town of Lobo, this campus offers specialized programs in marine biology and environmental sciences.
               </div>
-              <button class="select-campus">SELECT CAMPUS</button>
+              <button class="select-campus" onclick="window.location.href='lb.html';">SELECT CAMPUS</button>
             </div>
           </div>
 
@@ -43,7 +43,7 @@
               <div class="campus-description">
                 Home to engineering and architecture programs, Alangilan Campus leads in research and innovation in Batangas.
               </div>
-              <button class="select-campus">SELECT CAMPUS</button>
+              <button class="select-campus" onclick="window.location.href='Al.html';">SELECT CAMPUS</button>
             </div>
           </div>
 
@@ -56,7 +56,7 @@
               <div class="campus-description">
                 Located in the coastal town of Mabini, the campus offers programs in fisheries and aquatic sciences.
               </div>
-              <button class="select-campus">SELECT CAMPUS</button>
+              <button class="select-campus" onclick="window.location.href='mb.html';">SELECT CAMPUS</button>
             </div>
           </div>
 
@@ -69,7 +69,7 @@
               <div class="campus-description">
                 Situated in the heritage town of Balayan, it focuses on teacher education and community development.
               </div>
-              <button class="select-campus">SELECT CAMPUS</button>
+              <button class="select-campus" onclick="window.location.href='bl.html';">SELECT CAMPUS</button>
             </div>
           </div>
         </div>
