--- a/login.signup/land.html
+++ b/login.signup/land.html
@@ -84,19 +84,11 @@
     </div>
   </header>
 
-  <section class="hero">
-    <div class="background-slider">
-      <div class="slide"><img src="login.signup/Lobo_campus.jpg" alt="Lobo Campus"/></div>
-      <div class="slide"><img src="login.signup/Alangilan_campus.jpg" alt="Alangilan Campus"/></div>
-      <div class="slide"><img src="login.signup/Mabini_campus.jpg" alt="Mabini Campus"/></div>
-      <div class="slide"><img src="login.signup/Balayan_campus.jpg" alt="Balayan Campus"/></div>
-      <!-- Duplicate slides for loop -->
-      <div class="slide"><img src="login.signup/Lobo_campus.jpg" alt="Lobo Campus"/></div>
-      <div class="slide"><img src="login.signup/Alangilan_campus.jpg" alt="Alangilan Campus"/></div>
-      <div class="slide"><img src="login.signup/Mabini_campus.jpg" alt="Mabini Campus"/></div>
-      <div class="slide"><img src="login.signup/Balayan_campus.jpg" alt="Balayan Campus"/></div>
-    </div>
-
+ <section class="hero">
+  <div class="hero-bg">
+    <img src="login.signup/bsu1.png" alt="BatStateU background"/>
+  </div>
+  
     <div class="hero-content">
       <h1 class="hero-title">Batangas State University</h1>
       <h2 class="sub-title">LAMB Campuses </h2>
