--- a/login.signup/loading.html
+++ b/login.signup/loading.html
@@ -3,14 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <title>Loading...</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="loading.css">
   <script defer src="loading.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <div class="loader-container">
-    <img src="login.signup/v1_101.png" alt="LAMB Logo" class="loading-image" id="logo">
-    <h1 class="loading-text" id="loading-text"></h1>
-  </div>
+  <section class="hero">
+    <div class="hero-bg">
+      <img src="login.signup/bsu1.png" alt="BatStateU background">
+    </div>
+
+    <div class="loader-container">
+      <div class="logo" id="logo">
+        <img src="login.signup/v1_101.png" alt="BatStateU Logo">
+      </div>
+
+      <h1 class="title">Batangas State University</h1>
+      <p class="subtitle">LAMB Campuses</p>
+
+      <div class="loading-bar">
+        <div class="progress"></div>
+      </div>
+
+      <p class="loading-text" id="loading-text"></p>
+    </div>
+  </section>
 </body>
 </html>
