--- a/login.signup/bl.html
+++ b/login.signup/bl.html
@@ -53,8 +53,10 @@
     <!-- Login Form -->
     <form class="auth-form" id="loginForm">
       <h2>Balayan Login</h2>
-      <input type="email" placeholder="Email" required />
-      <input type="password" placeholder="Password" required />
+      <label for="username">Username</label>
+      <input type="email" placeholder="Enter your username" required />
+      <label for="password">Password</label>
+      <input type="password" placeholder="Enter your password" required />
       <div class="form-options">
         <label><input type="checkbox" /> Remember me</label>
         <a href="#">Forgot password?</a>
@@ -68,10 +70,12 @@
 <!-- Signup Form -->
 <form id="signupForm" class="auth-form hidden">
   <h2>Balayan Sign Up</h2>
-  
-  <input type="text" id="signupUsername" placeholder="Username" required />
-  <input type="email" id="signupEmail" placeholder="Email" required />
-  <input type="password" id="signupPassword" placeholder="Password" required />
+  <label for="username">Username</label>
+  <input type="text" id="signupUsername" placeholder="Enter your username" required />
+  <label for="email">Email</label>
+  <input type="email" id="signupEmail" placeholder="Enter your email" required />
+  <label for="password">Password</label>
+  <input type="password" id="signupPassword" placeholder="Enter your password" required />
   
   <!-- Confirm Password Field -->
   <input type="password" id="signupConfirmPassword" placeholder="Confirm Password" required />
